Scorrimento immagini auto vendita

--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -35,7 +35,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">Mk.1 16v</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -55,7 +63,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Subaru 555</h3>
                     <h3 class="font-semibold mb-5">Edizione 555</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -86,7 +102,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Audi S4</h3>
                     <h3 class="font-semibold mb-5">Versione V8</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -117,7 +141,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">Mk.1 16v</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -148,7 +180,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Subaru 555</h3>
                     <h3 class="font-semibold mb-5">Edizione 555</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -179,7 +219,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Audi S4</h3>
                     <h3 class="font-semibold mb-5">Versione V8</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -210,7 +258,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">Mk.1 16v</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -241,7 +297,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Subaru 555</h3>
                     <h3 class="font-semibold mb-5">Edizione 555</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -272,7 +336,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Audi S4</h3>
                     <h3 class="font-semibold mb-5">Versione V8</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -303,7 +375,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">Mk.1 16v</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -334,7 +414,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Subaru 555</h3>
                     <h3 class="font-semibold mb-5">Edizione 555</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -365,7 +453,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Audi S4</h3>
                     <h3 class="font-semibold mb-5">Versione V8</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
