--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Renault Clio</h3>
                     <h3 class="font-semibold mb-5">Mk.1 16v</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -136,17 +144,24 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
-
                     </div>
-
                 </div>
+
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Subaru 555</h3>
                     <h3 class="font-semibold mb-5">Edizione 555</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/1.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -167,8 +182,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -177,7 +192,15 @@
                 <div class="h-fit autovendita">
                     <h3 class="text-2xl font-bold">Audi S4</h3>
                     <h3 class="font-semibold mb-5">Versione V8</h3>
-                    <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v">
+                    <div class="image-container" data-current-index="0">
+                        <img class="immaginevendita mb-5" src="./assets/images/3.jpg" alt="Renault Clio Mk.1 16v">
+                        <img class="immaginevendita mb-5" src="./assets/images/4.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <img class="immaginevendita mb-5" src="./assets/images/5.jpg" alt="Renault Clio Mk.1 16v"
+                            style="display: none;">
+                        <button class="prev" onclick="prevImage(this)">&#10094;</button>
+                        <button class="next" onclick="nextImage(this)">&#10095;</button>
+                    </div>
                     <a class="font-semibold">Anno:</a> 1994<br>
                     <a class="font-semibold">Cilindrata:</a> 1.8L <br>
                     <a class="font-semibold">Potenza:</a> 99kW (135CV) - 152Nm<br>
@@ -198,8 +221,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -208,10 +231,10 @@
         </section>
 
         <div class="flex w-full place-content-center">
-            <button onclick="window.location.href='./vendita-auto.html';"
-                class="pulsante text-center text-2xl">Vai alle altre macchine in vendita</button>
+            <button onclick="window.location.href='./vendita-auto.html';" class="pulsante text-center text-2xl">Vai alle
+                altre macchine in vendita</button>
         </div>
-        
+
     </div>
 
 
