--- a/Vendita-auto.html
+++ b/Vendita-auto.html
@@ -92,8 +92,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -131,8 +131,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -170,8 +170,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -209,8 +209,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -248,8 +248,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -287,8 +287,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -326,8 +326,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -365,8 +365,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -404,8 +404,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -443,8 +443,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -482,8 +482,8 @@
                         </div>
 
                         <div class="flex w-full place-content-center mt-4">
-                            <button onclick="window.location.href='#contatti';"
-                                class="pulsante text-center">Chiedi maggiori informazioni</button>
+                            <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
+                                maggiori informazioni</button>
                         </div>
 
                     </div>
@@ -493,7 +493,8 @@
         </section>
 
         <div class="flex flex w-full place-content-center">
-            <button onclick="window.location.href='index.html';" class="pulsante text-center text-2xl">Ritorna alla pagina iniziale</button>
+            <button onclick="window.location.href='index.html';" class="pulsante text-center text-2xl">Ritorna alla
+                pagina iniziale</button>
         </div>
 
     </div>
