--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         riservati</p>
     </div>
 
-    <div class="text-center small-text mb-10">Website created by Diocane</div>
+    <div class="text-center small-text mb-10">Website created by Ziocan</div>
 
     <script src="./assets/script.js"></script>
 </body>
