--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </div>
     </div>
 
-    <div class="text-center">© 2024 Roberto Tomasoni S.N.C. - C.F./P.IVA: <a class="underline" target="_blank"
+    <div class="text-center">© 2024 Tomasoni Roberto S.N.C. - C.F./P.IVA: <a class="underline" target="_blank"
             href="https://www.ufficiocamerale.it/1597/tomasoni-roberto-snc" a>02043710165</a> - Tutti i diritti
         riservati</p>
     </div>
