--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Tomasoni</title>
+    <title>Auto Tomasonii</title>
     <link rel="stylesheet" href="./assets/styles.css">
     <link rel="icon" href="./assets/images/logotitle.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
