testo chi siamo

--- a/index.html
+++ b/index.html
@@ -70,16 +70,25 @@
         <section id="chi-siamo">
             <h2 class="text-4xl font-semibold mb-3">Chi Siamo</h2>
             <p class="text-base font-medium">
-            <p class="mb-2"> L'attività artigianale della Tomasoni s.n.c. opera nel settore dell'automobile dal lontano
-                1958, azienda avviata dal padre Oreste e affiancata negli anni dai figli Roberto e Paolo. Un'attività
-                iniziata con la riparazione degli autoveicoli e successivamente accompagnata dalla vendita. </p>
-            <p class="mb-2"> La nostra esperienza, coadiuvata da molteplici corsi tecnici e commerciali ci hanno portato
-                alle conoscenza della soddisfazione del cliente, guidandolo verso un' acquisto professionale e serio
-                offrendo un'assistenza tecnica con officina specializzata e in caso di prolungarsi dell'intervento, alla
-                disponibilità di un'auto sostitutiva. </p>
-            <p class="mb-2"> Disponiamo inoltre di apparecchiature elettroniche per qualsiasi problematica e
-                diagnostica, servizio pneumatici e pre collaudi. Offriamo inoltre finanziamenti a tassi agevolati e
-                assicurazioni in generale. </p>
+            <p class="mb-2"> La Tomasoni s.n.c. è un'azienda familiare che opera nel settore automobilistico dal 1958.
+                Fondata da Oreste Tomasoni e oggi gestita dai figli Roberto e Paolo, la nostra attività è cresciuta nel
+                tempo, passando dalla riparazione di autoveicoli alla vendita.
+                Con oltre 60 anni di esperienza, combiniamo tradizione artigianale e innovazione, grazie a continui
+                aggiornamenti attraverso corsi tecnici e commerciali. Oggi, con l'ingresso della terza generazione,
+                stiamo introducendo nuove tecnologie informatiche per migliorare ulteriormente i nostri servizi,
+                rendendoli ancora più efficienti e al passo con i tempi. </p>
+
+            <p class="mb-2"> La nostra officina è dotata di attrezzature elettroniche
+                all'avanguardia per diagnosticare e risolvere qualsiasi problema. Offriamo servizi completi, tra cui
+                pre-collaudi, manutenzione pneumatici e, se necessario, forniamo un'auto sostitutiva durante le
+                riparazioni.
+                Inoltre, offriamo consulenza personalizzata sull'acquisto di autovetture, aiutando i clienti a trovare
+                la soluzione più adatta alle loro esigenze. Per gli appassionati di auto d'epoca, ci occupiamo anche
+                della gestione delle pratiche ASI, necessarie per certificare il valore storico del veicolo. </p>
+
+            <p class="mb-2"> Alla base del nostro lavoro c'è una forte passione per le automobili, che ci impegna non
+                solo professionalmente, ma anche nel tempo libero. Questa passione ci motiva a offrire un servizio
+                impeccabile, sempre attento alle esigenze dei nostri clienti, con serietà e competenza. </p>
             </p>
         </section>
 
