--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
             <div class="tabellafondo">
                 <div id="contatti" class="contact">
-                    <h1 class="text-2xl font-semibold mb-4">Contattaci</h1>
+                    <h1 class="text-3xl font-semibold mb-4">Contattaci</h1>
                     <p>Email: <a class="underline decoration-black" href="mailto:info@autotomasoni.com"> info@autotomasoni.com </a><br>
                         PEC: <a class="underline decoration-black" href="mailto:tomasonisnc@pec.buffetti.it">
                             tomasonisnc@pec.buffetti.it</a><br>
@@ -276,8 +276,8 @@
             </div>
             <div class="tabellafondo items-center">
                 <div id="footer" class="footer">
-                    <h1 class="text-2xl font-semibold mb-8">Orari di apertura</h1>
-                    <p class="mb-10">
+                    <h1 class="text-3xl font-semibold mb-8">Orari di apertura</h1>
+                    <p class="mb-10 text-2xl">
                         <a class="font-semibold">Lun - Ven:</a> 8:30 - 12:30, 14:00 - 19:00<br>
                         <a class="font-semibold">Sabato:</a> 8:30 - 12:30<br>
                         <a class="font-semibold">Domenica:</a> Chiuso<br>
