--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="arrow right">&#10095;</div>
         </div>
 
-        <div class="absolute inset-x-0 bottom-0 text-center p-3 z-30">
+        <div class="hidden xl:block absolute inset-x-0 bottom-0 text-center p-3 z-30">
             <div class="flex flex-col gap-5 place-content-center">
                 <div class="flex place-content-center rounded-lg">
                     <div class="px-2 py-1 rounded-lg bg-white">
