--- a/index.html
+++ b/index.html
@@ -95,26 +95,33 @@
 
             <section id="servizi">
                 <h2 class="text-4xl font-semibold mb-4">Servizi</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2">
+                <div class="grid grid-cols-1 md:grid-cols-3">
                     <div class="service">
-                        <h3 class="text-lg font-semibold">Autoriparazioni</h3>
-                        <p>XXX</p>
+                        <h3 class="text-center font-semibold">Autoriparazioni</h3>
                     </div>
                     <div class="service">
-                        <h3 class="text-lg font-semibold">Gommista</h3>
-                        <p>XXX</p>
-                    </div>
-                    <div class="service col-span-1 md:col-span-2">
-                        <h3 class="text-lg font-semibold">Elettrauto</h3>
-                        <p>XXX</p>
+                        <h3 class="text-center font-semibold">Gommista</h3>
                     </div>
                     <div class="service">
-                        <h3 class="text-lg font-semibold">Tagliandi di ogni marca</h3>
-                        <p>XXX</p>
+                        <h3 class="text-center font-semibold">Elettrauto</h3>
                     </div>
                     <div class="service">
-                        <h3 class="text-lg font-semibold">Revisioni impianti GPL e Metano</h3>
-                        <p>XXX</p>
+                        <h3 class="text-center font-semibold">Tagliandi di ogni marca</h3>
+                    </div>
+                    <div class="service">
+                        <h3 class="text-center font-semibold">Revisioni impianti GPL e Metano</h3>
+                    </div>
+                    <div class="service">
+                        <h3 class="text-center font-semibold">Ganci traino</h3>
+                    </div>
+                    <div class="service">
+                        <h3 class="text-center font-semibold">Auto di cortesia</h3>
+                    </div>
+                    <div class="service">
+                        <h3 class="text-center font-semibold">Recupero vetture</h3>
+                    </div>
+                    <div class="service">
+                        <h3 class="text-center font-semibold">Elaborazioni</h3>
                     </div>
                 </div>
             </section>
