--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header p-5 flex justify-between items-center bg-[#dd240b]">
+    <header class="header p-5 flex justify-between items-center bg-[#0f1d75]">
         <a href="index.html">
             <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
         </a>
