freccia scopri di più cambio colore

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="animate-bounce bg-white transition-all p-3 rounded-full shadow-md">
                         <a href="#chi-siamo">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                class="size-8 stroke-red-600 stroke-2">
+                                class="size-8 stroke-blue-600 stroke-2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5" />
                             </svg>
