--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Tomasoni</title>
     <link rel="stylesheet" href="./assets/styles.css">
-    <link rel="icon" href="./assets/images/logotitle.jpg">
+    <link rel="icon" href="./assets/images/logotitle.png">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
