pagina auto fix

--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto Tomasoni</title>
     <link rel="stylesheet" href="./assets/styles.css">
-    <link rel="icon" href="./assets/images/logotitle.jpg">
+    <link rel="icon" href="./assets/images/logotitle.png">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-    <header class="header p-5 grid grid-cols-1 md:grid-cols-2 bg-[#dd240b] items-center">
+    <header class="header p-5 grid grid-cols-1 md:grid-cols-2 bg-[#0f1d75] items-center">
         <div class="flex place-content-center md:place-content-start">
             <a href="index.html">
-                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.jpg" alt="AutoTomasoni">
+                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
             </a>
         </div>
         <nav
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <div class="contentvendita flex flex-col gap-8 p-8">
+    <div class="contentvendita mt-24 flex flex-col gap-8 p-8">
 
         <section id="auto">
             <h2 class="text-4xl font-bold mb-4">Auto in vendita</h2>
