autoscout pagina auto

--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -497,6 +497,11 @@
                 pagina iniziale</button>
         </div>
 
+        <div class="flex w-full place-content-center">
+            <button onclick="window.location.href='https://www.autoscout24.it/concessionari/automobili-tomasoni';"
+                class="pulsante text-center">Seguici sul nostro profilo AutoScout24!</button>
+        </div>
+
     </div>
 
 
