--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                             <div class="flex w-full place-content-center mt-4">
                                 <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                    class="pulsante text-center">Vai all'annunio completo</button>
+                                    class="pulsante text-center">Vai all'annuncio completo</button>
                             </div>
 
                             <div class="flex w-full place-content-center mt-4">
@@ -195,7 +195,7 @@
 
                             <div class="flex w-full place-content-center mt-4">
                                 <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                    class="pulsante text-center">Vai all'annunio completo</button>
+                                    class="pulsante text-center">Vai all'annuncio completo</button>
                             </div>
 
                             <div class="flex w-full place-content-center mt-4">
@@ -234,7 +234,7 @@
 
                             <div class="flex w-full place-content-center mt-4">
                                 <button onclick="window.location.href='https://www.autoscout24.it/';"
-                                    class="pulsante text-center">Vai all'annunio completo</button>
+                                    class="pulsante text-center">Vai all'annuncio completo</button>
                             </div>
 
                             <div class="flex w-full place-content-center mt-4">
