--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="navboxes md:text-2xl" href="#chi-siamo">Chi Siamo</a>
             <a class="navboxes md:text-2xl" href="#servizi">Servizi</a>
             <a class="navboxes md:text-2xl" href="#auto">Auto</a>
-            <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamos</a>
+            <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
             <a class="navboxes md:text-2xl" href="#contatti">Contatti</a>
         </nav>
     </header>
