--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -519,14 +519,20 @@
         <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2">
             <div class="tabellafondo">
                 <div id="contatti" class="contact">
-                    <h1 class="text-2xl font-semibold mb-4">Contattaci</h1>
-                    <p>Email: <a class="underline decoration-black" href="mailto:">XXX </a><br>
+                    <h1 class="text-3xl font-semibold mb-4">Contattaci</h1>
+                    <p>Email: <a class="underline decoration-black" href="mailto:info@autotomasoni.com">
+                            info@autotomasoni.com </a><br>
                         PEC: <a class="underline decoration-black" href="mailto:tomasonisnc@pec.buffetti.it">
                             tomasonisnc@pec.buffetti.it</a><br>
-                        Telefono: <a class="underline decoration-black" href="tel:035 511338">035 5113389</a><br>
+                        Telefono: <a class="underline decoration-black" href="tel:035 511338">035 5113389</a> |
+                        Cellullare: <a class="underline decoration-black" href="tel:3206657485"> +39 320 6657485
+                        </a><br>
                         <a class="underline decoration-black" target="_blank"
                             href="https://maps.app.goo.gl/7apCXDPPx2fwYe469"> Indirizzo: Via LOMBARDIA 8 - 24022 -
-                            ALZANO LOMBARDO (BG)</a>
+                            ALZANO LOMBARDO (BG)</a><br>
+                        <a class="underline decoration-black"
+                            href="https://www.autoscout24.it/concessionari/automobili-tomasoni">Seguici sul nostro
+                            profilo AutoScout24! </a>
                     </p>
                 </div>
             </div>
