--- a/vendita-auto.html
+++ b/vendita-auto.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-    <header class="header p-5 grid grid-cols-1 md:grid-cols-2 bg-[#0f1d75] items-center">
-        <div class="flex place-content-center md:place-content-start">
-            <a href="index.html">
-                <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
-            </a>
-        </div>
-        <nav
-            class="mt-4 md:mt-0 flex flex-row gap-5 text-slate-100 font-semibold md:place-content-end place-content-between">
+    <header class="header p-5 flex justify-between items-center bg-[#0f1d75]">
+        <a href="index.html">
+            <img class="h-16 ml-2 logo-stondato" src="./assets/images/logo.png" alt="AutoTomasoni">
+        </a>
+        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+        <nav id="menu" class="hidden md:flex flex-row gap-5 text-slate-100 font-semibold">
             <a class="navboxes md:text-2xl" href="index.html#chi-siamo">Chi Siamo</a>
             <a class="navboxes md:text-2xl" href="index.html#servizi">Servizi</a>
             <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
