--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
         <nav id="menu" class="hidden md:flex flex-row gap-5 text-slate-100 font-semibold">
             <a class="navboxes md:text-2xl" href="#chi-siamo">Chi Siamo</a>
-            <a class="navboxes md:text-2xl" href="#servizi">Servizi</a>
+            <a class="navboxes md:text-2xl" href="#servizi">Servizis</a>
             <a class="navboxes md:text-2xl" href="#auto">Auto</a>
             <a class="navboxes md:text-2xl" href="#dove-siamo">Dove siamo</a>
             <a class="navboxes md:text-2xl" href="#contatti">Contatti</a>
